# drift

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
.github/workflows/: cmake.yml
assets/: preload.res
assets/bgm/: preload.res
assets/models/: preload.res
assets/models/backpack/: backpack.mtl
assets/models/cube/: bluecube.mtl  groundcube.mtl
assets/skybox/: preload.res
assets/sprites/: preload.res
assets/sprites/loading/: loading.psd  loading.spr
external-cmake/: CMakeLists.txt
external-cmake/ImGui/: CMakeLists.txt
external-cmake/SoLoudStatic/: CMakeLists.txt
src/: CubeTest.cpp  CubeTest.h  CubeTest2.cpp  CubeTest2.h  Entity.h  HandmadeMath.h  ID.h  MT_Only.h  SystemOrdering.h  common.cpp  common.h  components.h  cpuid.h  drift.cpp  stbImpl.cpp  systems.h
src/common/: Bit.h  Colour.h  Debug.cpp  Debug.h  MakeArray.h  MathDefs.h  Mutex.h  PolymorphicValue.h  Rect.h  StaticVector.h  Transforms.h  fTrans.h
src/components/: transform.h
src/components/Core/: Camera.h  CameraComponents.h  Frame.h  FrameComponents.h  Physics.cpp  Physics.h  PhysicsComponents.cpp  PhysicsComponents.h  Render.cpp  Render.h  RenderComponents.cpp  RenderComponents.h  ResourceComponents.h  Sound.cpp  SoundComponents.cpp  SoundComponents.h  Transform.h  TransformComponents.h
src/components/Game/: Character.h  GinRummyComponents.cpp  GinRummyComponents.h  Player.h  PlayerComponents.h  UIComponents.cpp  UIComponents.h
src/managers/: EntityManager.cpp  EntityManager.h  Input.cpp  Input.h  InputManager.cpp  InputManager.h  Render.cpp  Render.h  RenderIDs.h  RenderManager.cpp  RenderManager.h  ResourceIDs.h  ResourceManager.cpp  ResourceManager.h  Resources.cpp  Resources.h  Sound.cpp  SoundManager.cpp  SoundManager.h  TextManager.cpp  TextManager.h
src/managers/RenderTools/: Enums.h  Pipeline.cpp  Pipeline.h  SpriteSceneData.cpp  SpriteSceneData.h
src/scenes/: CubeTest.cpp  CubeTest.h  GinRummy.cpp  GinRummy.h  Scene.h
src/shaders/: common.glslh  depth_only.frag  depth_only.glsl  depth_only.vert  main.frag  main.glsl  main.vert  phong.frag  phong.glsl  phong.vert  render_target_to_screen.frag  render_target_to_screen.glsl  render_target_to_screen.vert  skybox.frag  skybox.glsl  skybox.vert  sprites.frag  sprites.glsl  sprites.vert  sprites_constants.glslh  unlit.frag  unlit.glsl  unlit.vert
src/systems/: ImGui.cpp  ImGui.h  Physics.cpp  Physics.h  SystemOrdering.h  TextAndGLDebug.cpp  TextAndGLDebug.h
src/systems/Core/: ImGui.cpp  ImGuiSystems.cpp  ImGuiSystems.h  Physics.cpp  Physics.h  PhysicsSystems.cpp  PhysicsSystems.h  Render.cpp  Render.h  RenderSystems.cpp  RenderSystems.h  ResourceSystems.cpp  ResourceSystems.h  Sound.cpp  SoundSystems.cpp  SoundSystems.h  SystemOrdering.h  TextAndGLDebug.cpp  TextAndGLDebug.h  TextAndGLDebugSystems.cpp  TextAndGLDebugSystems.h
src/systems/Game/: Character.h  GinRummySystems.cpp  GinRummySystems.h  Player.cpp  Player.h  PlayerSystems.cpp  UISystems.cpp  UISystems.h
